--- a/D1/P1-L0.md
+++ b/D1/P1-L0.md
@@ -19,7 +19,7 @@ Modifica sólo la línea que contenga las iniciales de tus apellidos y tu nombre
 | H. A. ANTONIO | <!--enlace-->                                                           |
 | H. M. ANDRES | <!--enlace-->                                                           |
 | J. U. JUAN LUIS | <!--enlace-->                                                           |
-| L. J. MAURICIO | <!--enlace-->                                                           |
+| L. J. MAURICIO | [<!--enlace-->](https://github.com/mauricioluquejimenez/practicas-ISE/blob/main/P1-L0-resultados.md)                                                           |
 | M. M. MANUEL | <!--enlace-->                                                           |
 | M. M. ANA ISABEL | <!--enlace-->                                                           |
 | M. R. ALEJANDRO | <!--enlace-->                                                           |
