--- a/D1/P1-L0.md
+++ b/D1/P1-L0.md
@@ -30,4 +30,4 @@ Modifica sólo la línea que contenga las iniciales de tus apellidos y tu nombre
 | R. L. ALBERTO | <!--enlace-->                                                           |
 | R. V. GERMAN | <!--enlace-->                                                           |
 | V. R. ELENA | <!--enlace-->                                                           |
-| V. G. HUGO | <!--enlace-->                                                           |
+| V. G. HUGO | https://github.com/hugovelez16/practicas-ISE/blob/main/P1-L0-resultados.md|
