--- a/D1/P1-L0.md
+++ b/D1/P1-L0.md
@@ -28,6 +28,6 @@ Modifica sólo la línea que contenga las iniciales de tus apellidos y tu nombre
 | R. V. JAVIER | <!--enlace-->                                                           |
 | R. N. CRISTIAN | <!--enlace-->                                                           |
 | R. L. ALBERTO | <!--enlace-->                                                           |
-| R. V. GERMAN | [<!--enlace-->  ](https://github.com/germanrv14/practicas-ISE/blob/main/P1-L0-resultados.md)                                                         |
+| R. V. GERMAN |https://github.com/germanrv14/practicas-ISE/blob/main/P1-L0-resultados.md|
 | V. R. ELENA | <!--enlace-->                                                           |
 | V. G. HUGO | <!--enlace-->                                                           |
