--- a/D1/P1-L0.md
+++ b/D1/P1-L0.md
@@ -7,7 +7,7 @@ Modifica sólo la línea que contenga las iniciales de tus apellidos y tu nombre
 | --------------- | ---------------------------------------------------------- |
 | A. O. PEDRO LUIS | <!--enlace-->                                                           |
 | A. L. ANA MARINA | <!--enlace-->                                                           |
-| A. L. GONZALO | [<!--enlace--> ](https://github.com/Gonzalo845/practicas-ISE/blob/main/P1-L0-resultados.md) |
+| A. L. GONZALO | <!--enlace-->https://github.com/Gonzalo845/practicas-ISE/blob/main/P1-L0-resultados.md  |
 | C. V. DANIEL | <!--enlace-->                                                           |
 | C. S. ALEJANDRO | <!--enlace-->                                                           |
 | C. L. JOAQUÍN | <!--enlace-->                                                           |
