--- a/D1/P1-L0.md
+++ b/D1/P1-L0.md
@@ -17,7 +17,7 @@ Modifica sólo la línea que contenga las iniciales de tus apellidos y tu nombre
 | G. G. MARIO | <!--enlace-->                                                           |
 | G. F. JAVIER | <!--enlace-->                                                           |
 | H. A. ANTONIO | <!--enlace-->                                                           |
-| H. M. ANDRES | <!--enlace-->                                                           |
+| H. M. ANDRES | [https://github.com/AndresHurtado001/practicas-ISE/blob/main/P1-L0-resultados.md](https://github.com/AndresHurtado001/practicas-ISE/blob/main/P1-L0-resultados.md)                                                           |
 | J. U. JUAN LUIS | <!--enlace-->                                                           |
 | L. J. MAURICIO | <!--enlace-->                                                           |
 | M. M. MANUEL | <!--enlace-->                                                           |
