--- a/D1/P1-L0.md
+++ b/D1/P1-L0.md
@@ -6,7 +6,7 @@ Modifica sólo la línea que contenga las iniciales de tus apellidos y tu nombre
 | Nombre       | Enlace                                                                   |
 | --------------- | ---------------------------------------------------------- |
 | A. O. PEDRO LUIS | <!--enlace-->                                                           |
-| A. L. ANA MARINA | <!--enlace-->                                                           |
+| A. L. ANA MARINA | [https://github.com/anaguilarl24/practicas-ISE/blob/main/P1-L0-resultados.md](https://github.com/anaguilarl24/practicas-ISE/blob/main/P1-L0-resultados.md)                                                          |
 | A. L. GONZALO | <!--enlace-->                                                           |
 | C. V. DANIEL | <!--enlace-->                                                           |
 | C. S. ALEJANDRO | <!--enlace-->                                                           |
