Actualización del archivo de la práctica 0

--- a/D1/P1-L0.md
+++ b/D1/P1-L0.md
@@ -5,7 +5,7 @@ Modifica sólo la línea que contenga las iniciales de tus apellidos y tu nombre
 
 | Nombre       | Enlace                                                                   |
 | --------------- | ---------------------------------------------------------- |
-| A. O. PEDRO LUIS | (https://github.com/pabril03/practicas-ISE/blob/main/P1-L0-resultados.md)                           |
+| A. O. PEDRO LUIS | [https://github.com/pabril03/practicas-ISE/blob/main/P1-L0-resultados.md](https://github.com/pabril03/practicas-ISE/blob/main/P1-L0-resultados.md)                           |
 | A. L. ANA MARINA | <!--enlace-->                                                           |
 | A. L. GONZALO | <!--enlace-->                                                           |
 | C. V. DANIEL | <!--enlace-->                                                           |
