--- a/D1/P1-L0.md
+++ b/D1/P1-L0.md
@@ -18,7 +18,7 @@ Modifica sólo la línea que contenga las iniciales de tus apellidos y tu nombre
 | G. F. JAVIER | <!--enlace-->                                                           |
 | H. A. ANTONIO | <!--enlace-->                                                           |
 | H. M. ANDRES | <!--enlace-->                                                           |
-| J. U. JUAN LUIS | <!--enlace-->                                                           |
+| J. U. JUAN LUIS | [https://github.com/jiur8/practicas-ISE/blob/main/P1-L0-resultados.md] (https://github.com/jiur8/practicas-ISE/blob/main/P1-L0-resultados.md)|
 | L. J. MAURICIO | <!--enlace-->                                                           |
 | M. M. MANUEL | <!--enlace-->                                                           |
 | M. M. ANA ISABEL | <!--enlace-->                                                           |
