--- a/D1/P1-L0.md
+++ b/D1/P1-L0.md
@@ -11,7 +11,7 @@ Modifica sólo la línea que contenga las iniciales de tus apellidos y tu nombre
 | C. V. DANIEL | <!--enlace-->                                                           |
 | C. S. ALEJANDRO | <!--enlace-->                                                           |
 | C. L. JOAQUÍN | <!--enlace-->                                                           |
-| F. G. CANDELA | <!--enlace-->                                                           |
+| F. G. CANDELA | [https://github.com/candelaafdez/practicas-ISE/blob/main/P1-L0.md] (https://github.com/candelaafdez/practicas-ISE/blob/main/P1-L0.md)|
 | F. R. FRANCISCO | <!--enlace-->                                                           |
 | F. R. OSCAR | <!--enlace-->                                                           |
 | G. G. MARIO | <!--enlace-->                                                           |
