--- a/D1/P1-L0.md
+++ b/D1/P1-L0.md
@@ -23,7 +23,7 @@ Modifica sólo la línea que contenga las iniciales de tus apellidos y tu nombre
 | M. M. MANUEL | <!--enlace-->                                                           |
 | M. M. ANA ISABEL | <!--enlace-->                                                           |
 | M. R. ALEJANDRO | <!--enlace-->                                                           |
-| P. P. SEBASTIAN | <!--enlace-->                                                           |
+| P. P. SEBASTIAN | [(https://github.com/sebas15840/practicas-ISE/blob/main/P1-L0-resultados.md)]|
 | R. G. PABLO | <!--enlace-->                                                           |
 | R. V. JAVIER | <!--enlace-->                                                           |
 | R. N. CRISTIAN | <!--enlace-->                                                           |
