--- a/D1/P1-L0.md
+++ b/D1/P1-L0.md
@@ -27,7 +27,7 @@ Modifica sólo la línea que contenga las iniciales de tus apellidos y tu nombre
 | R. G. PABLO | <!--enlace-->                                                           |
 | R. V. JAVIER | <!--enlace-->                                                           |
 | R. N. CRISTIAN | <!--enlace-->                                                           |
-| R. L. ALBERTO | <!--enlace-->                                                           |
+| R. L. ALBERTO | https://github.com/albertorl22/practicas-ISE/blob/main/P1-L0-resultados.md |
 | R. V. GERMAN | <!--enlace-->                                                           |
 | V. R. ELENA | <!--enlace-->                                                           |
 | V. G. HUGO | <!--enlace-->                                                           |
