--- a/B3/P1-L0.md
+++ b/B3/P1-L0.md
@@ -10,7 +10,7 @@ Modifica solo la línea que contenga las iniciales de tus apellidos y tu nombre.
 | F. P. MARINO | <!--enlace-->                                                           |
 | F. B. MIGUEL | <!--enlace-->                                                           |
 | I. MEHDI | <!--enlace-->                                                           |
-| J. S. DAVID | <!--enlace-->                                                           |
+| J. S. DAVID | [https://github.com/davidjs11/bitacoras-ISE-24-25/blob/main/D1/P1-L0.md](https://github.com/davidjs11/bitacoras-ISE-24-25/blob/main/D1/P1-L0.md)                                                          |
 | L. U. JOSE MARIA | <!--enlace-->                                                           |
 | M. C. ALEJANDRO | <!--enlace-->                                                           |
 | M. D. JUAN CARLOS | <!--enlace-->                                                           |
