--- a/B3/P1-L0.md
+++ b/B3/P1-L0.md
@@ -15,7 +15,7 @@ Modifica solo la línea que contenga las iniciales de tus apellidos y tu nombre.
 | M. C. ALEJANDRO | <!--enlace-->                                                           |
 | M. D. JUAN CARLOS | <!--enlace-->                                                           |
 | N. M. ALEJANDRO | <!--enlace-->                                                           |
-| O. C. FRANCESC | <!--enlace-->                                                           |
+| O. C. FRANCESC | [https://github.com/xescoliver/practicas-ISE/P1-L0-resultados.md](https://github.com/xescoliver/practicas-ISE/P1-L0-resultados.md)                                                         |
 | O. J. JOSE IGNACIO | <!--enlace-->                                                           |
 | P. P. ELISA | <!--enlace-->                                                           |
 | P. G. INÉS | <!--enlace-->                                                           |
