--- a/B3/P1-L0.md
+++ b/B3/P1-L0.md
@@ -22,7 +22,7 @@ Modifica solo la línea que contenga las iniciales de tus apellidos y tu nombre.
 | Q. P. ANDREA KUNPING | <!--enlace-->                                                           |
 | R. S. ALEJANDRO | <!--enlace-->                                                           |
 | S. M. M. FRANCISCO | <!--enlace-->                                                           |
-| V. B. JOSE ANDRES | [https://github.com/joseandress18/practicas-ISE/tree/master](https://github.com/joseandress18/practicas-ISE/tree/master)                                                           |
+| V. B. JOSE ANDRES | [https://github.com/joseandress18/practicas-ISE/blob/master/P1-L0-resultados.md]([https://github.com/joseandress18/practicas-ISE/blob/master/P1-L0-resultados.md)                                                           |
 | V. R. FERNANDO | <!--enlace-->                                                           |
 | V. A. GABRIEL | <!--enlace-->                                                           |
 | V. S. CRISTINA | <!--enlace-->                                                           |
