Agrego enlace a mi bitácora para la lección 0 de la práctica 1

--- a/B3/P1-L0.md
+++ b/B3/P1-L0.md
@@ -9,7 +9,7 @@ Modifica solo la línea que contenga las iniciales de tus apellidos y tu nombre.
 | C. G. VICTOR | [https://github.com/vicmaviclu/practicas-ISE/blob/main/P1-L0-resultados.md](https://github.com/vicmaviclu/practicas-ISE/blob/main/P1-L0-resultados.md)                                                           |
 | F. P. MARINO | <!--enlace-->                                                           |
 | F. B. MIGUEL | <!--enlace-->                                                           |
-| I. MEHDI | <!--enlace-->                                                           |
+| I. MEHDI | [https://github.com/ermedimrc/practicas-ISE/blob/main/P1-L0-resultados.md](https://github.com/ermedimrc/practicas-ISE/blob/main/P1-L0-resultados.md)                 |
 | J. S. DAVID | <!--enlace-->                                                           |
 | L. U. JOSE MARIA | [https://github.com/JoseMariaLozano/practicas-ISE/blob/main/P1-L0-resultados.md](https://github.com/JoseMariaLozano/practicas-ISE/blob/main/P1-L0-resultados.md) |
 | M. C. ALEJANDRO | <!--enlace-->                                                           |
