--- a/D1/P1-L0.md
+++ b/D1/P1-L0.md
@@ -8,7 +8,7 @@ Modifica sólo la línea que contenga las iniciales de tus apellidos y tu nombre
 | A. O. PEDRO LUIS | <!--enlace-->                                                           |
 | A. L. ANA MARINA | [https://github.com/anaguilarl24/practicas-ISE/blob/main/P1-L0-resultados.md](https://github.com/anaguilarl24/practicas-ISE/blob/main/P1-L0-resultados.md)                                                          |
 | A. L. GONZALO | <!--enlace-->                                                           |
-| C. V. DANIEL | <!--enlace-->                                                           |
+| C. V. DANIEL | [https://github.com/DanielChicoUGR/practicas-ISE/blob/Deploy/P1-L0-resultados.md](https://github.com/DanielChicoUGR/practicas-ISE/blob/Deploy/P1-L0-resultados.md)                                                           |
 | C. S. ALEJANDRO | <!--enlace-->                                                           |
 | C. L. JOAQUÍN | [https://github.com/juakincruzz/practicas-ISE/blob/main/P1-L0-resultados.md] (https://github.com/juakincruzz/practicas-ISE/blob/main/P1-L0-resultados.md)|                                                         |
 | F. G. CANDELA | [https://github.com/candelaafdez/practicas-ISE/blob/main/P1-L0.md] (https://github.com/candelaafdez/practicas-ISE/blob/main/P1-L0.md)|
