--- a/B3/P1-L0.md
+++ b/B3/P1-L0.md
@@ -26,5 +26,5 @@ Modifica solo la línea que contenga las iniciales de tus apellidos y tu nombre.
 | V. R. FERNANDO | <!--enlace-->                                                           |
 | V. A. GABRIEL | [https://github.com/gabrielvico02/practicas-ISE/blob/main/P1-L0-resultados.md](https://github.com/gabrielvico02/practicas-ISE/blob/main/P1-L0-resultados.md)                                                           |
 | V. S. CRISTINA | [https://github.com/26203/practicas-ISE/blob/main/P1-L0-resultados.md](https://github.com/26203/practicas-ISE/blob/main/P1-L0-resultados.md)                                                           |
-| V. A. GABRIEL | <!--enlace-->                                                           |
+| V. A. GABRIEL | [https://github.com/gabrielvico02/practicas-ISE/blob/main/P1-L0-resultados.md](https://github.com/gabrielvico02/practicas-ISE/blob/main/P1-L0-resultados.md)                                                           |
 | V. S. CRISTINA | [https://github.com/26203/practicas-ISE/blob/main/P1-L0-resultados.md](https://github.com/26203/practicas-ISE/blob/main/P1-L0-resultados.md)                                                           |
