Agrego enlace a mi bitácora para la lección 0 de la práctica 1

--- a/D1/P1-L0.md
+++ b/D1/P1-L0.md
@@ -13,7 +13,7 @@ Modifica sólo la línea que contenga las iniciales de tus apellidos y tu nombre
 | C. L. JOAQUÍN | <!--enlace-->                                                           |
 | F. G. CANDELA | <!--enlace-->                                                           |
 | F. R. FRANCISCO | <!--enlace-->                                                           |
-| F. R. OSCAR | <!--enlace-->                                                           |
+| F. R. OSCAR | [https://github.com/oscar0310/practicas-ISE/blob/main/P1-L0-resultados.md](https://github.com/oscar0310/practicas-ISE/blob/main/P1-L0-resultados.md)                                                          |
 | G. G. MARIO | <!--enlace-->                                                           |
 | G. F. JAVIER | <!--enlace-->                                                           |
 | H. A. ANTONIO | <!--enlace-->                                                           |
