--- a/D1/P1-L0.md
+++ b/D1/P1-L0.md
@@ -30,4 +30,4 @@ Modifica sólo la línea que contenga las iniciales de tus apellidos y tu nombre
 | R. L. ALBERTO | https://github.com/albertorl22/practicas-ISE/blob/main/P1-L0-resultados.md |
 | R. V. GERMAN | [https://github.com/germanrv14/practicas-ISE/blob/main/P1-L0-resultados.md](https://github.com/germanrv14/practicas-ISE/blob/main/P1-L0-resultados.md) |
 | V. R. ELENA | [https://github.com/elenavallejor/practicas-ISE/blob/main/P1-L0-resultados.md](https://github.com/elenavallejor/practicas-ISE/blob/main/P1-L0-resultados.md) |
-| V. G. HUGO | <!--enlace-->                                                           |
+| V. G. HUGO | [https://github.com/hugovelez16/practicas-ISE/blob/47600e576f69abc80eac95f1a3827f63f29f81d9/P1-L0-resultados.md](https://github.com/hugovelez16/practicas-ISE/blob/47600e576f69abc80eac95f1a3827f63f29f81d9/P1-L0-resultados.md) |
