--- a/D1/P1-L1.md
+++ b/D1/P1-L1.md
@@ -27,6 +27,6 @@ Modifica sólo la línea que tenga tus iniciales.
 | R. V. JAVIER | <!--enlace-->                                                           |
 | R. N. CRISTIAN | <!--enlace-->                                                           |
 | R. L. ALBERTO | https://github.com/albertorl22/practicas-ISE/blob/main/p1_l1.jpg      |
-| R. V. GERMAN | <!--enlace-->                                                           |
+| R. V. GERMAN |[https://github.com/germanrv14/practicas-ISE/blob/main/P1-L1-resultados.md](https://github.com/germanrv14/practicas-ISE/blob/main/P1-L1-resultados.md)|
 | V. R. ELENA | [https://github.com/elenavallejor/practicas-ISE/blob/main/P1-L1.resultados.md](https://github.com/elenavallejor/practicas-ISE/blob/main/P1-L1.resultados.md)|
 | V. G. HUGO | <!--enlace-->                                                           |
