--- a/D1/P1-L1.md
+++ b/D1/P1-L1.md
@@ -28,5 +28,5 @@ Modifica sólo la línea que tenga tus iniciales.
 | R. N. CRISTIAN | <!--enlace-->                                                           |
 | R. L. ALBERTO | https://github.com/albertorl22/practicas-ISE/blob/main/p1_l1.jpg      |
 | R. V. GERMAN | <!--enlace-->                                                           |
-| V. R. ELENA | [https://github.com/elenavallejor/practicas-ISE/blob/main/P1-L1.resultados.md](https://github.com/elenavallejor/practicas-ISE/blob/main/P1-L1.resultados.md)|
+| V. R. ELENA | <!--enlace-->                                                           |
 | V. G. HUGO | <!--enlace-->                                                           |
