--- a/B3/P1-L1.md
+++ b/B3/P1-L1.md
@@ -25,4 +25,4 @@ Modifica solo la línea que contenga las iniciales de tus apellidos y tu nombre.
 | V. B. JOSE ANDRES | <!--enlace-->                                                           |
 | V. R. FERNANDO | <!--enlace-->                                                           |
 | V. A. GABRIEL | <!--enlace-->                                                           |
-| V. S. CRISTINA | <!--enlace-->                                                           |
+| V. S. CRISTINA |[https://github.com/26203/practicas-ISE/blob/main/P1-L1-resultados.md](https://github.com/26203/practicas-ISE/blob/main/P1-L1-resultados.md)|
