--- a/B3/P1-L1.md
+++ b/B3/P1-L1.md
@@ -9,7 +9,7 @@ Modifica solo la línea que contenga las iniciales de tus apellidos y tu nombre.
 | C. G. VICTOR | <!--enlace-->                                                           |
 | F. P. MARINO | <!--enlace-->                                                           |
 | F. B. MIGUEL | <!--enlace-->                                                           |
-| I. MEHDI | [(https://github.com/ermedimrc/practicas-ISE/blob/main/P1-L1)](https://github.com/ermedimrc/practicas-ISE/blob/main/P1-L1)                                                          |
+| I. MEHDI | [https://github.com/ermedimrc/practicas-ISE/blob/main/P1-L1.md](https://github.com/ermedimrc/practicas-ISE/blob/main/P1-L1.md)                                                          |
 | J. S. DAVID | <!--enlace-->                                                           |
 | L. U. JOSE MARIA | <!--enlace-->                                                           |
 | M. C. ALEJANDRO | <!--enlace-->                                                           |
