--- a/D1/P1-L1.md
+++ b/D1/P1-L1.md
@@ -28,5 +28,5 @@ Modifica sólo la línea que tenga tus iniciales.
 | R. N. CRISTIAN | <!--enlace-->                                                           |
 | R. L. ALBERTO | https://github.com/albertorl22/practicas-ISE/blob/main/P1_L1-resultados.md      |
 | R. V. GERMAN |[https://github.com/germanrv14/practicas-ISE/blob/main/P1-L1-resultados.md](https://github.com/germanrv14/practicas-ISE/blob/main/P1-L1-resultados.md)|
-| V. R. ELENA | <!--enlace-->                                                           |
+| V. R. ELENA | [https://github.com/elenavallejor/practicas-ISE/blob/main/P1-L1.resultados.md](https://github.com/elenavallejor/practicas-ISE/blob/main/P1-L1.resultados.md)|
 | V. G. HUGO | [https://github.com/hugovelez16/practicas-ISE/blob/9e5dfe100169e43c5f8ff8c3bba2d2ec90ce7712/P1-L1-resultados.md](https://github.com/hugovelez16/practicas-ISE/blob/9e5dfe100169e43c5f8ff8c3bba2d2ec90ce7712/P1-L1-resultados.md) |
