--- a/D1/P1-L2.md
+++ b/D1/P1-L2.md
@@ -28,5 +28,5 @@ Modifica sólo la línea que tenga tus iniciales.
 | R. N. CRISTIAN | <!--enlace-->                                                           |
 | R. L. ALBERTO | <!--enlace-->                                                           |
 | R. V. GERMAN | <!--enlace-->                                                           |
-| V. R. ELENA | <!--enlace-->                                                           |
+| V. R. ELENA | [https://github.com/elenavallejor/practicas-ISE/blob/main/P1-L2-resultados.md](https://github.com/elenavallejor/practicas-ISE/blob/main/P1-L2-resultados.md) |
 | V. G. HUGO | <!--enlace-->                                                           |
