--- a/B3/P1-L2.md
+++ b/B3/P1-L2.md
@@ -18,7 +18,7 @@ Modifica solo la línea que contenga las iniciales de tus apellidos y tu nombre.
 | O. C. FRANCESC | <!--enlace-->                                                           |
 | O. J. JOSE IGNACIO | <!--enlace-->                                                           |
 | P. P. ELISA | <!--enlace-->                                                           |
-| P. G. INÉS | <!--enlace-->                                                           |
+| P. G. INÉS | [https://github.com/inesprados/practicas-ISE/blob/main/P1-L2-resultados.md](https://github.com/inesprados/practicas-ISE/blob/main/P1-L2-resultados.md)    |
 | Q. P. ANDREA KUNPING | <!--enlace-->                                                           |
 | R. S. ALEJANDRO | <!--enlace-->                                                           |
 | S. M. M. FRANCISCO | <!--enlace-->                                                           |
