--- a/D1/P1-L2.md
+++ b/D1/P1-L2.md
@@ -27,6 +27,6 @@ Modifica sólo la línea que tenga tus iniciales.
 | R. V. JAVIER | <!--enlace-->                                                           |
 | R. N. CRISTIAN | <!--enlace-->                                                           |
 | R. L. ALBERTO | <!--enlace-->                                                           |
-| R. V. GERMAN | <!--enlace-->                                                           |
+| R. V. GERMAN |[https://github.com/germanrv14/practicas-ISE/blob/main/P1-L2-resultados.md](https://github.com/germanrv14/practicas-ISE/blob/main/P1-L2-resultados.md) |
 | V. R. ELENA | [https://github.com/elenavallejor/practicas-ISE/blob/main/P1-L2-resultados.md](https://github.com/elenavallejor/practicas-ISE/blob/main/P1-L2-resultados.md) |
 | V. G. HUGO | <!--enlace-->                                                           |
