Agrego enlace a mi bitácora para la lección 0 de la práctica 1

--- a/D1/P1-L0.md
+++ b/D1/P1-L0.md
@@ -24,7 +24,7 @@ Modifica sólo la línea que contenga las iniciales de tus apellidos y tu nombre
 | M. M. ANA ISABEL | [https://github.com/anabelmenam/practicas-ISE/blob/main/P1-L0-resultados.md](https://github.com/anabelmenam/practicas-ISE/blob/main/P1-L0-resultados.md)                                                           |
 | M. R. ALEJANDRO | [https://github.com/AlexMr08/practicas-ISE/blob/main/P1-L0-resultados.md](https://github.com/AlexMr08/practicas-ISE/blob/main/P1-L0-resultados.md)                                                           |
 | P. P. SEBASTIAN | [https://github.com/sebas15840/practicas-ISE/blob/main/P1-L0-resultados.md](https://github.com/sebas15840/practicas-ISE/blob/main/P1-L0-resultados.md)|
-| R. G. PABLO | <!--enlace-->                                                           |
+| R. G. PABLO | https://github.com/pablorg0/practicas-ISE/blob/main/P1-L0-resultados.md |
 | R. V. JAVIER | [https://github.com/jramvil/practicas-ISE/blob/main/P1-L0-resultados.md](https://github.com/jramvil/practicas-ISE/blob/main/P1-L0-resultados.md) |
 | R. N. CRISTIAN | <!--enlace-->                                                           |
 | R. L. ALBERTO | https://github.com/albertorl22/practicas-ISE/blob/main/P1-L0-resultados.md |
