Agrego enlace a mi repositorio de bitácoras para la lección 2 de la práctica 1

--- a/D1/P1-L2.md
+++ b/D1/P1-L2.md
@@ -8,7 +8,7 @@ Modifica sólo la línea que tenga tus iniciales.
 | A. L. ANA MARINA | <!--enlace-->                                                           |
 | A. L. GONZALO | <!--enlace-->                                                           |
 | C. V. DANIEL | <!--enlace-->                                                           |
-| C. S. ALEJANDRO | <!--enlace-->                                                           |
+| C. S. ALEJANDRO | [https://github.com/AlexCoca99/practicasISE/blob/main/P1-L2-resultados.md] (https://github.com/AlexCoca99/practicasISE/blob/main/P1-L2-resultados.md)                                                           |
 | C. L. JOAQUÍN | [https://github.com/juakincruzz/practicas-ISE/blob/main/P1-L2-resultados.md] (https://github.com/juakincruzz/practicas-ISE/blob/main/P1-L2-resultados.md) |
 | F. G. CANDELA | [https://github.com/candelaafdez/practicas-ISE/blob/main/P1-L2.md] (https://github.com/candelaafdez/practicas-ISE/blob/main/P1-L2.md) |
 | F. R. FRANCISCO | <!--enlace-->                                                           |
