--- a/B3/P1-L2.md
+++ b/B3/P1-L2.md
@@ -22,7 +22,7 @@ Modifica solo la línea que contenga las iniciales de tus apellidos y tu nombre.
 | Q. P. ANDREA KUNPING | <!--enlace-->                                                           |
 | R. S. ALEJANDRO | <!--enlace-->                                                           |
 | S. M. M. FRANCISCO | [https://github.com/Fransmm/practicas-ISE/blob/main/P1-L2-resultados.md](https://github.com/Fransmm/practicas-ISE/blob/main/P1-L2-resultados.md)                                                           |
-| V. B. JOSE ANDRES | <!--enlace-->                                                           |
+| V. B. JOSE ANDRES | [https://github.com/joseandress18/practicas-ISE/blob/main/P1-L2-resultados.md](https://github.com/joseandress18/practicas-ISE/blob/main/P1-L2-resultados.md)                                                           |
 | V. R. FERNANDO | <!--enlace-->                                                           |
 | V. A. GABRIEL | [https://github.com/gabrielvico02/practicas-ISE/blob/main/P1-L2-resultados.md](https://github.com/gabrielvico02/practicas-ISE/blob/main/P1-L2-resultados.md)                                                           |
 | V. S. CRISTINA | <!--enlace-->                                                           |
