--- a/D1/P1-L3.md
+++ b/D1/P1-L3.md
@@ -26,7 +26,7 @@ Modifica sólo la línea que tenga tus iniciales.
 | R. G. PABLO | <!--enlace-->                                                           |
 | R. V. JAVIER | <!--enlace-->                                                           |
 | R. N. CRISTIAN | <!--enlace-->                                                           |
-| R. L. ALBERTO | <!--enlace-->                                                           |
+| R. L. ALBERTO | https://github.com/albertorl22/practicas-ISE/blob/main/P1_L3-resultados.md |
 | R. V. GERMAN | <!--enlace-->                                                           |
 | V. R. ELENA | <!--enlace-->                                                           |
 | V. G. HUGO | <!--enlace-->                                                           |
