--- a/D1/P1-L3.md
+++ b/D1/P1-L3.md
@@ -27,6 +27,6 @@ Modifica sólo la línea que tenga tus iniciales.
 | R. V. JAVIER | <!--enlace-->                                                           |
 | R. N. CRISTIAN | <!--enlace-->                                                           |
 | R. L. ALBERTO | https://github.com/albertorl22/practicas-ISE/blob/main/P1_L3-resultados.md |
-| R. V. GERMAN | <!--enlace-->                                                           |
+| R. V. GERMAN | https://github.com/germanrv14/practicas-ISE/blob/main/P1-L3_resulatado.md |                                                 |
 | V. R. ELENA | <!--enlace-->                                                           |
 | V. G. HUGO | <!--enlace-->                                                           |
