--- a/B3/P1-L1.md
+++ b/B3/P1-L1.md
@@ -11,7 +11,7 @@ Modifica solo la línea que contenga las iniciales de tus apellidos y tu nombre.
 | F. B. MIGUEL | [https://github.com/miguelfnez/practicas-ISE/blob/main/P1-L1-resultado.md](https://github.com/miguelfnez/practicas-ISE/blob/main/P1-L1-resultado.md) |
 | I. MEHDI | [https://github.com/ermedimrc/practicas-ISE/blob/main/P1-L1.md](https://github.com/ermedimrc/practicas-ISE/blob/main/P1-L1.md)     |
 | J. S. DAVID | [https://github.com/davidjs11/practicas-ISE/blob/main/P1-L1-resultados.md](https://github.com/davidjs11/practicas-ISE/blob/main/P1-L1-resultados.md)
-| L. U. JOSE MARIA | <!--enlace-->                                                           |
+| L. U. JOSE MARIA | [https://github.com/JoseMariaLozano/practicas-ISE/blob/main/P1-L1.png](https://github.com/JoseMariaLozano/practicas-ISE/blob/main/P1-L1.png)                                                           |
 | M. C. ALEJANDRO | <!--enlace-->                                                           |
 | M. D. JUAN CARLOS | [https://github.com/jcarlosmoradiaz2ugr/practicas-ISE/blob/main/P1-L1.md](https://github.com/jcarlosmoradiaz2ugr/practicas-ISE/blob/main/P1-L1.md)|
 | N. M. ALEJANDRO | [https://github.com/Alexanm04/practicas-ISE/blob/19746bf43e07ea16c2ac7e17b1c3e880d84a95c6/P1-L1-resultados.md](https://github.com/Alexanm04/practicas-ISE/blob/19746bf43e07ea16c2ac7e17b1c3e880d84a95c6/P1-L1-resultados.md)                                                           |
