--- a/B3/P1-L2.md
+++ b/B3/P1-L2.md
@@ -11,7 +11,7 @@ Modifica solo la línea que contenga las iniciales de tus apellidos y tu nombre.
 | F. B. MIGUEL | [https://github.com/miguelfnez/practicas-ISE/blob/main/P1-L2-resultados.md](https://github.com/miguelfnez/practicas-ISE/blob/main/P1-L2-resultados.md) |
 | I. MEHDI | [https://github.com/ermedimrc/practicas-ISE/blob/main/P1-L2-resultados.md](https://github.com/ermedimrc/practicas-ISE/blob/main/P1-L2-resultados.md)  |
 | J. S. DAVID | [https://github.com/davidjs11/practicas-ISE/blob/main/P1-L2%20resultados.md](https://github.com/davidjs11/practicas-ISE/blob/main/P1-L2%20resultados.md)
-| L. U. JOSE MARIA | <!--enlace-->                                                           |
+| L. U. JOSE MARIA | [https://github.com/JoseMariaLozano/practicas-ISE/blob/main/P1-L2.png](https://github.com/JoseMariaLozano/practicas-ISE/blob/main/P1-L2.png)                                                           |
 | M. C. ALEJANDRO | <!--enlace-->                                                           |
 | M. D. JUAN CARLOS | [https://github.com/jcarlosmoradiaz2ugr/practicas-ISE/blob/main/P1-L2.md](https://github.com/jcarlosmoradiaz2ugr/practicas-ISE/blob/main/P1-L2.md)  |
 | N. M. ALEJANDRO | [https://github.com/Alexanm04/practicas-ISE/blob/039a61a9455678d466554fc3ec9402ef1285d4ab/P1-L2-resultados.md](https://github.com/Alexanm04/practicas-ISE/blob/039a61a9455678d466554fc3ec9402ef1285d4ab/P1-L2-resultados.md)                                                           |
